# raffi

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  Makefile  README.md
.github/: dependabot.yml
.github/instructions/: dev.instructions.md
.github/workflows/: releaser.yaml  rust.yaml  website.yaml
Formula/: raffi.rb
examples/: raffi-schema.json  raffi.yaml
misc/: make-release.sh
scripts/search/: README.md  search.py
src/: debug.rs  lib.rs  main.rs
src/ui/: fuzzel.rs  mod.rs  native.rs  tui.rs  wayland.rs
src/ui/wayland/: actions.rs  ansi.rs  app.rs  browser.rs  currency.rs  emoji.rs  script_filters.rs  snippets.rs  state.rs  support.rs  tests.rs  theme.rs  types.rs  view.rs
website/: astro.config.mjs  package-lock.json  package.json
website/src/content/docs/: index.mdx  installation.mdx  introduction.mdx  quickstart.mdx
website/src/content/docs/configuration/: conditions.mdx  entries.mdx  general-settings.mdx  icons.mdx  overview.mdx  scripts.mdx
website/src/content/docs/features/: calculator.mdx  currency-converter.mdx  file-browser.mdx  script-filters.mdx  text-snippets.mdx  themes.mdx  ui-modes.mdx  web-search.mdx
website/src/content/docs/integration/: fuzzel.mdx  hyprland.mdx  sway.mdx
website/src/content/docs/reference/: addon-configuration.mdx  cli-options.mdx  yaml-schema.mdx
