[package]
authors = ["Chmouel Boudjnah <chmouel@chmouel.com>"]
name = "raffi"
description = "A simple fuzzel launcher based on YAML file"
version = "0.9.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["task", "command", "launch"]
homepage = "https://github.com/chmouel/raffi"
documentation = "https://github.com/chmouel/raffi"
repository = "https://github.com/chmouel/raffi"

[dependencies]
anyhow = "1.0.100"
gumdrop = { version = "0.8.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
serde_yaml = "0.9.34"
tempfile = "3.23.0"
walkdir = "2.5.0"
skim = "0.20.5"
iced = { version = "0.13", features = ["tiny-skia", "image", "svg"] }
